# scimpl

./: .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  ref.rst
src/scimpl/: __init__.py  adjust.py  main.py
tests/: test_scimpl.py
