[tool.poetry]
name = "scimpl"
version = "0.1.0"
description = "Plotting workflow for scientific research."
authors = ["Ryan Park"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
sphinx = {version = "^7.2.6", python = ">=3.9"}
sphinx-autoapi = "^3.0.0"
sphinxcontrib-napoleon = "^0.7"
python-semantic-release = "^8.3.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sphinx-rtd-theme = "^1.3.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[tool.setuptools_scm]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
